Add content and images for all sections. Not finished but a good start.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-code"></span></div>
-							<h2>Hi, I'm Matt!</h2>
-							<p>Full Stack Dev in training with aspirations of doing big things</p>
+							<h2>Hi, I'm Matt</h2>
+							<p>Full Stack Dev In Training & Current Lambda Student</p>
 						</div>
 					</section>
 
@@ -54,34 +54,61 @@
 						<!-- ABOUT ME: Use this section for giving a short synopsis of my story -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/matt-herich.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About Me</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<p>Matt is a multi-faceted bionic man with dreams of doing big things. In 2015 he co-founded <a href="https://businessoptimizer.org/" target="_blank">Business Optimizer</a>, a digital marketing agency focused on web development and SEO for local and nationwide clients. He is now determined to perfect his full stack skill set with the help of Lambda School.</p>
+										<p>Despite the many health challenges I've faced in my life I have pushed through the tough times and held my head high. I care deeply about health and wellness, am avid swimmer and hope to one day compete in a triathlon.</p>
+										<a href="https://medium.com/business-optimizer/matt-herich-introduction-e7bf907f001a" class="special" target="_blank">Matt's Story</a>
 									</div>
 								</div>
 							</section>
 
 						<!-- TECHICAL SKILLS: List all my programming languages and technical skills that employers want to see -->
-							<section id="two" class="wrapper alt spotlight style2">
+							<section id="two" class="wrapper alt spotlight style2 technical-skills">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Technical Skills</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<p>I began learning HTML, CSS and Javacript in 2015 and quickly fell in love with everything about web development and computer science.</p>
+										<div class="my-box">
+											<ul>
+												<li>HTML5</li>
+												<li>CSS3</li>
+												<li>Javascript</li>
+												<li>PHP</li>
+											</ul>
+											<ul>
+												<li>Wordpress</li>
+												<li>ReactJS (in training)</li>
+												<li>AngularJS (in training)</li>
+											</ul>
+										</div>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
 
 						<!-- MY EXPERIENCE: Highlight my experience in web development and digital marketing -->
-							<section id="three" class="wrapper spotlight style3">
+							<section id="three" class="wrapper spotlight style3 soft-skills">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">My Experience</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
+										<h2 class="major">Soft Skills</h2>
+										<p>What makes me different from other developers you may ask? Well, my journey into full-stack web development began in Wordpress while doing much more than standard web design/development.</p>
+										<div class="my-box">
+												<ul>
+													<li>Self-Starter</li>
+													<li>Excellent Communicator</li>
+													<li>Results Oriented</li>
+													<li>Team-Player</li>
+												</ul>
+												<ul>
+													<li>Leadership Experience</li>
+													<li>Creative Experience</li>
+													<li>Sales Experience</li>
+												</ul>
+											</div>
 										<a href="#" class="special">Learn more</a>
 									</div>
 								</div>
@@ -94,28 +121,28 @@
 									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/sprint 1.png" alt="" /></a>
+											<h3 class="major">User Interface Sprint Challenge</h3>
+											<p>In this project I practiced the concepts and techniques I learned about UI design.</p>
+											<a href="https://github.com/mjherich/Sprint-Challenge--User-Interface" class="special">View on Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
+											<h3 class="major">Coming Soon</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="special">View on Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
+											<h3 class="major">Coming Soon</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="special">View on Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
+											<h3 class="major">Coming Soon</h3>
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="special">View on Github</a>
 										</article>
 									</section>
 									<ul class="actions">
@@ -130,7 +157,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<p>Thanks for taking the time to check out my portfolio. I will be graduating from Lambda's 9-month intensive program in early 2020 and I'd love to start connecting with potential employers so feel free to drop a line!</p>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -156,7 +183,7 @@
 								<li class="fa-twitter"><a href="https://twitter.com/mattherich">twitter.com/mattherich</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Matt Herich All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
