--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <script src="./components/Tabs/index.js" async></script>
   <script src="./components/Header/index.js" async></script>
   <script src="./components/Cards/index.js" async></script>
-  <!-- <script src="./components/Carousel/Carousel.js" async></script> -->
+  <!-- Greensock animations for carousel -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+  <script src="./components/Carousel/Carousel.js" async></script>
 </head>
 
 <body>
