added Info section and media queries for tablet and phone

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="fixed">
         <div class="logo">
           <a href="index.html">Youtube U</a>
         </div>
@@ -25,6 +25,8 @@
           <a href="#">Contact</a>
         </div>
       </nav>
+
+      <div class="nav-spacer"></div>
 
       <section id="Hero">
         <div class="container">
@@ -50,12 +52,40 @@
 
     <main>
       <section id="Info">
-        <div class="content">
-          <div>
-            <span><i class="fas fa-graduation-cap"></i></span>
+        <div class="container">
+          <div class="Info-content">
+            <div class="Info-text">
+              <h2>
+                Learn the skills you need now. <br />
+                You’ll thank yourself later.
+              </h2>
+              <p>
+                The best investment you can make is in yourself. That thing you
+                wanted to learn but couldn’t find the right tutorial? Look no
+                further. We know exactly where to look.
+              </p>
+            </div>
+            <div class="Info-icon">
+              <img src="img/school-icon.svg" alt="" />
+            </div>
+          </div>
+          <div class="Info-content">
+            <div class="Info-icon">
+              <img src="img/playlist-icon.svg" alt="" />
+            </div>
+            <div class="Info-text">
+              <h2>
+                You tell us what you want to know. <br />
+                We find the answers.
+              </h2>
+              <p>
+                We’ll find the most relevant videos and even make them into a
+                playlist for you! All you have to do is tell us what skills
+                you’re interested in learning by filling out our form.
+              </p>
+            </div>
           </div>
         </div>
-        <div class="content"></div>
       </section>
     </main>
   </body>
