--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="links">
           <a href="#">Home</a>
           <a href="#">Learn</a>
-          <a href="#">About</a>
+          <a href="about.html">About</a>
           <a href="#">Contact</a>
         </div>
       </nav>
