--- a/about.html
+++ b/about.html
@@ -29,13 +29,126 @@
 
     <main>
       <section id="About">
-        <div class="About-team">
-          <div class="team-member"></div>
-          <div class="team-member"></div>
-          <div class="team-member"></div>
-          <div class="team-member"></div>
-          <div class="team-member"></div>
-          <div class="team-member"></div>
+        <div class="container">
+          <div class="About-team">
+            <div class="team-info">
+              <h2>Meet the team</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non,
+                magni illum exercitationem et deserunt enim, libero hic ullam
+                placeat perferendis vitae mollitia, aperiam omnis vero
+                recusandae commodi culpa harum esse. Lorem ipsum, dolor sit amet
+                consectetur adipisicing elit. Perferendis necessitatibus ipsum
+                omnis quas suscipit, at autem provident odit eius id natus
+                commodi ut officia nulla expedita rerum exercitationem.
+                Accusantium, aliquid.
+              </p>
+            </div>
+            <div class="row">
+              <div class="member-card">
+                <div class="member-photo">
+                  <img src="img/khaled.png" alt="Chris B." />
+                </div>
+                <div class="member-bio">
+                  <h2>Khaled Adad</h2>
+                  <h3>
+                    Data Engineer
+                  </h3>
+                  <p>
+                    Helping professional service firms understand customers and
+                    recommend decisions. To do this, I specialize in recommender
+                    systems, natural language processing, and deploying machine
+                    learning models with user interfaces.
+                  </p>
+                </div>
+              </div>
+              <div class="member-card">
+                <div class="member-photo">
+                  <img src="img/chris.png" alt="Chris Bonifacio" />
+                </div>
+                <div class="member-bio">
+                  <h2>Chris Bonifacio</h2>
+                  <h3>
+                    Web UI Developer
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Neque facere sit, esse quaerat reiciendis ipsa veritatis
+                    quibusdam nemo animi, tempore in laborum distinctio quisquam
+                    optio voluptates dolorum placeat commodi non!
+                  </p>
+                </div>
+              </div>
+              <div class="member-card">
+                <div class="member-photo">
+                  <img src="img/stan.jpg" alt="Stanley Kusmier" />
+                </div>
+                <div class="member-bio">
+                  <h2>Stanley Kusmier</h2>
+                  <h3>
+                    DS3 - Machine Learning Engineer
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Neque facere sit, esse quaerat reiciendis ipsa veritatis
+                    quibusdam nemo animi, tempore in laborum distinctio quisquam
+                    optio voluptates dolorum placeat commodi non!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="member-card">
+                <div class="member-photo">
+                  <img src="img/matt.png" alt="Matt Herich" />
+                </div>
+                <div class="member-bio">
+                  <h2>Matt Herich</h2>
+                  <h3>
+                    React Developer
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Neque facere sit, esse quaerat reiciendis ipsa veritatis
+                    quibusdam nemo animi, tempore in laborum distinctio quisquam
+                    optio voluptates dolorum placeat commodi non!
+                  </p>
+                </div>
+              </div>
+              <div class="member-card">
+                <div class="member-photo">
+                  <img src="img/andrew.png" alt="Andrew Mendez" />
+                </div>
+                <div class="member-bio">
+                  <h2>Andrew Mendez</h2>
+                  <h3>
+                    React Developer
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Neque facere sit, esse quaerat reiciendis ipsa veritatis
+                    quibusdam nemo animi, tempore in laborum distinctio quisquam
+                    optio voluptates dolorum placeat commodi non!
+                  </p>
+                </div>
+              </div>
+              <div class="member-card">
+                <div class="member-photo">
+                  <img src="img/scott.jpg" alt="Scott Beeker" />
+                </div>
+                <div class="member-bio">
+                  <h2>Scott Beeker</h2>
+                  <h3>
+                    React Developer
+                  </h3>
+                  <p>
+                    Developer Out Of Orlando, FL Changing The World One Line Of
+                    Code At A Time
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
