--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     />
     <script src="https://kit.fontawesome.com/eb928705cc.js"></script>
     <link rel="stylesheet" href="css/index.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -152,5 +153,7 @@
         </div>
       </section>
     </main>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
