--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       rel="stylesheet"
     />
     <script src="https://kit.fontawesome.com/eb928705cc.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/index.css" />
+
     <title>Document</title>
   </head>
   <body>
@@ -31,10 +33,10 @@
       <section id="Hero">
         <div class="container">
           <div class="Hero-content">
-            <div class="Hero-img">
+            <div data-aos="fade-right" class="Hero-img">
               <img src="img/hero-photo.png" alt="" />
             </div>
-            <div class="Hero-text">
+            <div data-aos="fade-down" class="Hero-text">
               <h1>
                 Learn something <br />
                 new every day.
@@ -54,7 +56,7 @@
       <section id="Info">
         <div class="container">
           <div class="Info-content">
-            <div class="Info-text">
+            <div data-aos="fade-right" class="Info-text">
               <h2>
                 Learn the skills you need now. <br />
                 You’ll thank yourself later.
@@ -65,15 +67,15 @@
                 further. We know exactly where to look.
               </p>
             </div>
-            <div class="Info-icon">
+            <div data-aos="fade-down" class="Info-icon">
               <img src="img/school-icon.svg" alt="" />
             </div>
           </div>
           <div class="Info-content">
-            <div class="Info-icon">
+            <div data-aos="fade-up" class="Info-icon">
               <img src="img/playlist-icon.svg" alt="" />
             </div>
-            <div class="Info-text">
+            <div data-aos="fade-left" class="Info-text">
               <h2>
                 You tell us what you want to know. <br />
                 We find the answers.
@@ -88,5 +90,10 @@
         </div>
       </section>
     </main>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
