--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <script src="https://kit.fontawesome.com/eb928705cc.js"></script>
     <link rel="stylesheet" href="css/index.css" />
 
-    <title>Document</title>
+    <title>Youtube U - About</title>
   </head>
   <body>
     <header>
