Mobile for all pages pretty much done, working on Desktop Views

--- a/about.html
+++ b/about.html
@@ -16,11 +16,43 @@
         <ul class="nav">
             <li><a class="navLinks" href="index.html">Home</a></li>
             <li><a class="navLinks" href="about.html">About</a></li>
-            <li><a class="navLinks" href="index.html#application">Application</a></li>
-            <li><a class="navLinks" href="index.html#contact">Contact</a></li>
+            <li><a class="navLinks" href="index.html#appText">Application</a></li>
+            <li><a class="navLinks" href="index.html#contactText">Contact</a></li>
         </ul>
     </header>
-    
+    <section class="teamCardSection">
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/blackManta.jpg" alt="Black Manta">
+            <h2 class="name">Black Manta</h2>
+            <p class="role">Project Lead</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/muttley.jpg" alt="Muttley">
+            <h2 class="name">Muttley</h2>
+            <p class="role">UI</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/blackManta.jpg" alt="Black Manta">
+            <h2 class="name">Black Manta</h2>
+            <p class="role">Project Lead</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/muttley.jpg" alt="Muttley">
+            <h2 class="name">Muttley</h2>
+            <p class="role">UI</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/blackManta.jpg" alt="Black Manta">
+            <h2 class="name">Black Manta</h2>
+            <p class="role">Project Lead</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/muttley.jpg" alt="Muttley">
+            <h2 class="name">Muttley</h2>
+            <p class="role">UI</p>
+        </div>        
+        <a class="backTop" href="about.html">↑ Back</a>
+    </section>
     <footer>
         <p class="copyrightText">© <script type="text/javascript">document.write(new Date().getFullYear())</script> Salty. All rights reserved.</p>
     </footer>
