--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
         <ul class="nav">
             <li><a class="navLinks" href="index.html">Home</a></li>
             <li><a class="navLinks" href="about.html">About</a></li>
-            <li><a class="navLinks" href="index.html#application">Application</a></li>
-            <li><a class="navLinks" href="index.html#contact">Contact</a></li>
+            <li><a class="navLinks" href="index.html#appText">Application</a></li>
+            <li><a class="navLinks" href="index.html#contactText">Contact</a></li>
         </ul>
     </header>
     <article>
         <div id="application">
             <img src="/media/applications.jpg" alt="Photo of Applications on Phone">
-            <h2>Application</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laborum magni debitis atque repudiandae voluptate, quaerat eveniet vitae asperiores sunt, exercitationem necessitatibus dicta aliquid distinctio. Rem, ut beatae. Ipsa, ipsam id.</p>
+            <h2  id="appText" class='appHeader'>Application</h2>
+            <p class='appText'>Salty is your one-stop shop to the Saltiest Comments on Haker News.  If you enjoy reading and keeping tabs of the most appalling, depraved, despicable comments on Hacker News.  We got you covered.  Sit back and appreciate those vile comments you love to read.  Now if you are the nasty, vulgar person commenting, then it is time to get really Salty because we have the Salty Top 100 for you to claim.  Can you become Number 1 and give our readers the filth they desire to read in your comments?  So let's all get Salty!</p>
+            <a class="saltyButton" href="#">Get Salty</a>
+            <a class="backTop" href="index.html">↑ Back</a>
         </div>
         <div id="contact">
             <img src="/media/contact.jpg" alt="Photo of Person Making a Phone Call">
-            <h2 id='contact'>Contact</h2>
+            <h2 id="contactText" class="contactHeader">Contact</h2>
             <form class="contactForm">
                 <p>Full Name:</p><br>
                 <input type="text" name="fullname" value="John Doe"><br>
@@ -39,6 +41,7 @@
                 <input type="comment" name="comment" value="Type your comment here."><br><br>
                 <button id='contactButton'>Submit</button>
             </form>
+            <a class="backTop" href="index.html">↑ Back</a>
             <div class='socialMediaLinks'>
                 <a href="https://www.facebook.com/" class="fa fa-facebook" target="_blank"></a>
                 <a href="https://twitter.com" class="fa fa-twitter" target="_blank"></a>
