Tweaking some styles on both mobile and desktop views

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div id="contact">
             <img src="/media/contact.jpg" alt="Photo of Person Making a Phone Call">
             <h2 id="contactText" class="contactHeader">Contact</h2>
-            <form class="contactForm">
+            <form class="contactForm" netlify>
                 <p>Full Name:</p><br>
                 <input type="text" name="fullname" value="John Doe"><br>
                 <p>Email:</p><br>
                 <input type="email" name="email" value="someone@somewhere.com"><br>
                 <p>Comment:</p><br>
                 <input type="comment" name="comment" value="Type your comment here."><br><br>
-                <button id='contactButton'>Submit</button>
+                <button id='contactButton' type="submit">Submit</button>
             </form>
             <a class="backTop" href="index.html">↑ Back</a>
             <div class='socialMediaLinks'>
