Some changes to place holders and view tweaks

--- a/about.html
+++ b/about.html
@@ -32,24 +32,24 @@
             <p class="role">UI</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/blackManta.jpg" alt="Black Manta">
-            <h2 class="name">Black Manta</h2>
-            <p class="role">Project Lead</p>
-        </div>
-        <div class="teamCard">
-            <img class="teamPhoto" src="/media/muttley.jpg" alt="Muttley">
-            <h2 class="name">Muttley</h2>
+            <img class="teamPhoto" src="/media/pinky.jpg" alt="Pinky">
+            <h2 class="name">Pinky</h2>
             <p class="role">UI</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/blackManta.jpg" alt="Black Manta">
-            <h2 class="name">Black Manta</h2>
-            <p class="role">Project Lead</p>
+            <img class="teamPhoto" src="/media/loki.jpg" alt="Loki">
+            <h2 class="name">Loki</h2>
+            <p class="role">Front End</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/muttley.jpg" alt="Muttley">
-            <h2 class="name">Muttley</h2>
-            <p class="role">UI</p>
+            <img class="teamPhoto" src="/media/brain.jpg" alt="Brain">
+            <h2 class="name">Brain</h2>
+            <p class="role">Data Engineer</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/gru.jpg" alt="Gru">
+            <h2 class="name">Gru</h2>
+            <p class="role">Machine Learning</p>
         </div>        
         <a class="backTop" href="about.html">↑ Back</a>
     </section>
