Finishing up the about page with team photos, names, roles, and description

--- a/about.html
+++ b/about.html
@@ -21,36 +21,74 @@
         </ul>
     </header>
     <section class="teamCardSection">
-        <div class="teamCard">
-            <img class="teamPhoto" src="/media/blackManta.jpg" alt="Black Manta">
-            <h2 class="name">Black Manta</h2>
+        <div id="projectLead" class="teamCard">
+            <img class="teamPhoto" src="/media/darien-payton.jpg" alt="Darien Payton">
+            <h2 class="name">Darien Payton</h2>
             <p class="role">Project Lead</p>
+            <p class="aboutTeam">Team Lead at Lambda School. Former marketing consultant. Enjoys playing piano, writing and playing basketball.</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/muttley.jpg" alt="Muttley">
-            <h2 class="name">Muttley</h2>
+            <img class="teamPhoto" src="/media/virgilio-rodriguez.jpeg" alt="Virgilio Rodriguez">
+            <h2 class="name">Virgilio Rodriguez</h2>
+            <p class="role">Role: UI</p>
+            <p class="aboutTeam">
+                Full Stack Web Developer Student at Lambda School.  Enjoys photography and flying drones commercially.  My future goal is to become a web developer and start this second career after 20 years of public safety experience in law enforcement and emergency medical.
+            </p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/unknown.jpg" alt="unknow avatar">
+            <h2 class="name">Lowell Jacobs</h2>
             <p class="role">UI</p>
+            <p class="aboutTeam">Full Stack Web Developer Student at Lambda School.</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/pinky.jpg" alt="Pinky">
-            <h2 class="name">Pinky</h2>
-            <p class="role">UI</p>
+            <img class="teamPhoto" src="/media/lucas-bazemore.jpg" alt="Lucas Bazemore">
+            <h2 class="name">Lucas Bazemore</h2>
+            <p class="role">FrontEnd</p>
+            <p class="aboutTeam">Full Stack Web Developer. Creator of useful stuff. Enjoys playing basketball, running, reading good books. Connoisseur of awesome.</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/loki.jpg" alt="Loki">
-            <h2 class="name">Loki</h2>
-            <p class="role">Front End</p>
+            <img class="teamPhoto" src="/media/matt-herich.JPG" alt="Matt Herich">
+            <h2 class="name">Matt Herich</h2>
+            <p class="role">FrontEnd</p>
+            <p class="aboutTeam">Full Stack Developer. When Matt is not busy coding he enjoys swimming, running, bicycling and esk8ing. His dream is to one day work at his leisure from a hammock in the tropics.</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/brain.jpg" alt="Brain">
-            <h2 class="name">Brain</h2>
+            <img class="teamPhoto" src="/media/daniel-vidal.JPG" alt="Daniel Vidal">
+            <h2 class="name">Daniel Vidal</h2>
+            <p class="role">FrontEnd</p>
+            <p class="aboutTeam">Full Stack web developer in the making currently attending Lambda School. I have an extreme passion for programming and computer science and my main goal is to one day create something that will play an important role for the future of computer science. </p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/eleasah-halsmer.jpg" alt="Eleasah Halsmer">
+            <h2 class="name">Eleasah Halsmer</h2>
+            <p class="role">FrontEnd</p>
+            <p class="aboutTeam">Developer studying Full Stack Web at Lambda School. Other interests include mathematics, Beethoven's piano sonatas, and going outdoors</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/hanchung-lee.jpg" alt="Hanchung Lee">
+            <h2 class="name">Hanchung Lee</h2>
             <p class="role">Data Engineer</p>
+            <p class="aboutTeam">Deep Learning Engineer. Reformed professional investment manager. Organic home farmer. EX World of Warcraft top 10 classic guild co-GM.</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/gru.jpg" alt="Gru">
-            <h2 class="name">Gru</h2>
-            <p class="role">Machine Learning</p>
-        </div>        
+            <img class="teamPhoto" src="/media/oliver-ash.jpg" alt="Oliver Ash">
+            <h2 class="name">Oliver Ash</h2>
+            <p class="role">Data Engineer</p>
+            <p class="aboutTeam">Data Science Student at Lambda School. Former philosophy student and combat medic. Enjoys classic novels and critical rationalist philosophy.</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/unknown.jpg" alt="Unknown Avatar">
+            <h2 class="name">Darek Tidwell</h2>
+            <p class="role">Machine Learning Engineer</p>
+            <p class="aboutTeam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, repudiandae quaerat reiciendis obcaecati facilis, commodi tempora esse neque quis reprehenderit officia laboriosam, ea quo! Sequi repudiandae repellendus rerum beatae blanditiis.</p>
+        </div>
+        <div class="teamCard">
+            <img class="teamPhoto" src="/media/unknown.jpg" alt="Unknown Avatar">
+            <h2 class="name">Nicolae Dubenco</h2>
+            <p class="role">Machine Learning Engineer</p>
+            <p class="aboutTeam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, assumenda labore! Voluptas rem quo earum harum! Qui quisquam saepe beatae tempore nihil rerum ducimus voluptate fuga a voluptas? Repudiandae, vero.</p>
+        </div>            
         <a class="backTop" href="about.html">↑ Back</a>
     </section>
     <footer>
