Additional replacing of placeholders.

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="teamCard">
             <img class="teamPhoto" src="/media/virgilio-rodriguez.jpeg" alt="Virgilio Rodriguez">
             <h2 class="name">Virgilio Rodriguez</h2>
-            <p class="role">Role: UI</p>
+            <p class="role">User Interface</p>
             <p class="aboutTeam">
                 Full Stack Web Developer Student at Lambda School.  Enjoys photography and flying drones commercially.  My future goal is to become a web developer and start this second career after 20 years of public safety experience in law enforcement and emergency medical.
             </p>
@@ -38,8 +38,8 @@
         <div class="teamCard">
             <img class="teamPhoto" src="/media/unknown.jpg" alt="unknow avatar">
             <h2 class="name">Lowell Jacobs</h2>
-            <p class="role">UI</p>
-            <p class="aboutTeam">Full Stack Web Developer Student at Lambda School.</p>
+            <p class="role">User Interface</p>
+            <p class="aboutTeam">I am a student at Lambda school. I enjoy web design, programming, and video games</p>
         </div>
         <div class="teamCard">
             <img class="teamPhoto" src="/media/lucas-bazemore.jpg" alt="Lucas Bazemore">
