Changes to about page

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/unknown.jpg" alt="unknow avatar">
+            <img class="teamPhoto" src="/media/anger-phone.jpg" alt="Angry Emoji on Phone">
             <h2 class="name">Lowell Jacobs</h2>
             <p class="role">User Interface</p>
             <p class="aboutTeam">I am a student at Lambda school. I enjoy web design, programming, and video games</p>
@@ -78,16 +78,16 @@
             <p class="aboutTeam">Data Science Student at Lambda School. Former philosophy student and combat medic. Enjoys classic novels and critical rationalist philosophy.</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/unknown.jpg" alt="Unknown Avatar">
+            <img class="teamPhoto" src="/media/anger-phone.jpg" alt="Angry Emoji on Phone">
             <h2 class="name">Darek Tidwell</h2>
             <p class="role">Machine Learning Engineer</p>
             <p class="aboutTeam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, repudiandae quaerat reiciendis obcaecati facilis, commodi tempora esse neque quis reprehenderit officia laboriosam, ea quo! Sequi repudiandae repellendus rerum beatae blanditiis.</p>
         </div>
         <div class="teamCard">
-            <img class="teamPhoto" src="/media/unknown.jpg" alt="Unknown Avatar">
+            <img class="teamPhoto" src="/media/nicolae-dubenco.jpg" alt="Nicolae Dubenco">
             <h2 class="name">Nicolae Dubenco</h2>
             <p class="role">Machine Learning Engineer</p>
-            <p class="aboutTeam">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, assumenda labore! Voluptas rem quo earum harum! Qui quisquam saepe beatae tempore nihil rerum ducimus voluptate fuga a voluptas? Repudiandae, vero.</p>
+            <p class="aboutTeam">Data Scientist & ML Engineer. SME entrepreneur. Student. Generalist with interests in Startups, Management & Marketing, Data and Human Behaviour. Books and online courses are my everyday 'food'.</p>
         </div>            
         <a class="backTop" href="about.html">↑ Back</a>
     </section>
