--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
         <a class="backTop" href="about.html">↑ Back</a>
     </section>
     <footer>
-        <p class="copyrightText">© <script type="text/javascript">document.write(new Date().getFullYear())</script> Salty. All rights reserved.</p>
+        <p class="copyrightText">© <script type="text/javascript">document.write(new Date().getFullYear())</script> Salty Hackers. All rights reserved.</p>
     </footer>
 </body>
 </html>
