--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logoBox">
-            <h1 class="logoText">Salty</h1>
+            <h1 class="logoText">Salty Hackers</h1>
         </div>
         <ul class="nav">
             <li><a class="navLinks" href="index.html">Home</a></li>
@@ -23,10 +23,10 @@
     </header>
     <article>
         <div id="application">
-            <img src="/media/applications.jpg" alt="Photo of Applications on Phone">
+            <img src="/media/saltyHacker.jpg" alt="Photo of Salty Hack Morton Salt Joke Logo">
             <h2  id="appText" class='appHeader'>Application</h2>
-            <p class='appText'>Salty is your one-stop shop to the Saltiest Comments on Haker News.  If you enjoy reading and keeping tabs of the most appalling, depraved, despicable comments on Hacker News.  We got you covered.  Sit back and appreciate those vile comments you love to read.  Now if you are the nasty, vulgar person commenting, then it is time to get really Salty because we have the Salty Top 100 for you to claim.  Can you become Number 1 and give our readers the filth they desire to read in your comments?  So let's all get Salty!</p>
-            <a class="saltyButton" target="_blank" href="https://hn-trolls.now.sh/">Get Salty</a>
+            <p class='appText'>Salty Hackers is your one-stop shop to the Saltiest Comments on Hacker News.  If you enjoy reading and keeping tabs of the most appalling, depraved, despicable comments on Hacker News.  We got you covered.  Sit back and appreciate those vile comments you love to read.  Now if you are the nasty, vulgar person commenting, then it is time to get really Salty because we have the Salty Top 100 for you to claim.  Can you become Number 1 and give our readers the filth they desire to read in your comments?  So let's all get Salty!</p>
+            <a class="saltyButton" target="_blank" href="https://hn-trolls.now.sh/">Salty Hackers</a>
             <a class="backTop" href="index.html">↑ Back</a>
         </div>
         <div id="contact">
@@ -51,7 +51,7 @@
         </div> 
     </article>
     <footer>
-        <p class="copyrightText">© <script type="text/javascript">document.write(new Date().getFullYear())</script> Salty. All rights reserved.</p>
+        <p class="copyrightText">© <script type="text/javascript">document.write(new Date().getFullYear())</script> Salty Hackers. All rights reserved.</p>
     </footer>
 </body>
 </html>
