Updated the favicon

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Damion|Patua+One|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="icon" href="/media/SALTY.png" type="image/gif" sizes="16x16">
     <title>Salty - About</title>
 </head>
 <body>
