--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Damion|Patua+One|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="/media/SALTY.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="/media/salt-shaker_1f9c2.png" type="image/gif" sizes="16x16">
     <title>Salty</title>
 </head>
 <body>
