--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Damion|Patua+One|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="icon" href="/media/salt-shaker_1f9c2.png" type="image/gif" sizes="16x16">
-    <title>Salty - About</title>
+    <title>Salty Hackers - About</title>
 </head>
 <body>
     <header>
