--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="/media/salt-shaker_1f9c2.png" type="image/gif" sizes="16x16">
-    <title>Salty</title>
+    <title>Salty Hackers</title>
 </head>
 <body>
     <header>
